render config files

--- a/.ansible/deploy.yaml
+++ b/.ansible/deploy.yaml
@@ -57,15 +57,15 @@
         content: '{{ password }}'
         dest: '{{ config_dir }}/secrets/password'
 
-    # - name: 'Render ca.json.j2 to {{ config_dir }}/config/ca.json'
-    #   template:
-    #     src: ca.json.j2
-    #     dest: '{{ config_dir }}/config/ca.json'
+    - name: 'Render ca.json.j2 to {{ config_dir }}/config/ca.json'
+      template:
+        src: ca.json.j2
+        dest: '{{ config_dir }}/config/ca.json'
 
-    # - name: 'Render defaults.json.j2 to {{ config_dir }}/config/defaults.json'
-    #   template:
-    #     src: defaults.json.j2
-    #     dest: '{{ config_dir }}/config/defaults.json'
+    - name: 'Render defaults.json.j2 to {{ config_dir }}/config/defaults.json'
+      template:
+        src: defaults.json.j2
+        dest: '{{ config_dir }}/config/defaults.json'
 
     - include_role:
         name: docker
