--- a/.drone.yaml
+++ b/.drone.yaml
@@ -17,7 +17,7 @@ steps:
       inventory: .ansible/inventories/production/hosts
       playbook: .ansible/deploy.yaml
       private_key:
-        from_secret: ansible_private_key
+        from_secret: automation_private_key
       vault_password:
         from_secret: ansible_vault_password 
 
