--- a/.ansible/templates/docker-compose.yaml
+++ b/.ansible/templates/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
       - {{ config_dir }}/:/home/step/
     networks:
       - {{ traefik_network }}
-    #environment:
-      #- STEPDEBUG=1
+    environment:
+      - STEPDEBUG=1
     deploy:
       labels:
         - traefik.enable=true
